<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     >

    
     <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_action_accept"
        android:orderInCategory="1"
        android:title="@string/uilib_select"
        app:showAsAction="always"/>
     
     
   <item
        android:id="@+id/action_folder_up"
        android:icon="@drawable/ic_action_folder_up"
        android:orderInCategory="2"
        android:title="@string/uilib_folder_up"
        app:showAsAction="collapseActionView|always"/>
   
     <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="3"
        android:title="@string/uilib_folder_home"
        app:showAsAction="ifRoom"/>
     
     <item
        android:id="@+id/action_hidden"
        android:orderInCategory="4"
        android:title="@string/uilib_show_hidden_menu_item"
        app:showAsAction="never"/>
     
    <item
        android:id="@+id/action_about_app"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
